--- a/css/style.css
+++ b/css/style.css
@@ -1,13 +1,20 @@
 body {
     margin: 0;
     padding: 1%;
+    background-color: #282a36;
+    color: #f8f8f2;
+}
+
+.green-title {
+    color: #50fa7b;
 }
 
 h1#nome {
     text-align: center;
+    color: #8be9fd
 }
 
-card#profile-card {
+div#profile-card {
     display: flex;
     flex-direction: column;
     width: 30%;
@@ -17,6 +24,7 @@ card#profile-card {
     text-align: center;
     padding: 1%;
     border-radius: 4%;
+    background-color: #44475a;
 }
 
 div#profile-container {
@@ -29,9 +37,24 @@ div#profile-container {
 
 
 img#profile-photo {
-    border-radius: 5%;
+    border-radius: 100%;
+}
+
+.no-decoration-link {
+    color: #bd93f9;
+    text-decoration: none;
 }
 
 a#link-img-profile {
-    font-size: small;
+    font-size: 10px;
+    margin-top: 5px;
+    text-decoration: none;
+    color: #bd93f9;
+}
+
+p#description {
+    background-color: #44475a;
+    padding: 2%;
+    text-align: left;
+    color: #ffb86c;
 }
